--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,11 @@
 <div class="task">
-  <h3>{{ task.text }}</h3>
+  <h3>
+    {{ task.text }}
+    <fa-icon
+      [icon]="faTimes"
+      (click)="onDelete(task)"
+      [ngStyle]="{ color: 'red' }"
+    ></fa-icon>
+  </h3>
   <p>{{ task.day }}</p>
 </div>
