--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,6 @@
-<app-task-item *ngFor="let task of tasks" [task]="task"></app-task-item>
+<app-task-item
+  *ngFor="let task of tasks"
+  [task]="task"
+  (timesDelete)="deleteTask(task)"
+  (onToggleReminder)="toggleTask(task)"
+></app-task-item>
