--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="container">
   <app-header></app-header>
-  <app-tasks></app-tasks>
+  <!-- <app-tasks></app-tasks> -->
+  <!-- using router -->
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
