--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,6 +8,7 @@ el event dah enta elly 3amlo w 3amelttlo eventemmit
 <header>
   <h1>{{ title }}</h1>
   <app-button
+    *ngIf="hasRoute('/')"
     color="{{ showAddTask ? 'red' : 'green' }}"
     text="{{ showAddTask ? 'Close' : 'Add' }}"
     (btnClick)="toggleAddTask()"
